# fronter

./: .gitignore  README.md  assert_utils.py  clustering_utils.py  dev_requirements.txt  function_wrappers.py  gen_data.py  match.py  match_utils.py  pixel_difference.py  rate.py  rate_utils.py  requirements.txt  test.py
Generate_html/: generate_page.py
Generate_html/templates/: English.txt  template.html
cv_tools/: lbp_extract.py
elem_classifier/: svm.py
elem_classify/: svm.py  svm_classifier.R
ml/: train_utils.py
ml/descriptors/: __init__.py  lbp.py  symb_height.py  symb_lbp.py
ocr/: tesseract.py
ocr/tess_c_bindings/: CMakeLists.txt  setup.py  tess_api.py  tess_c_api.cpp  tess_c_api.h  tess_c_api.i
tags_generator/: css_param.py  default_elements.py  default_styles.py  designed_element.py  multi_css_param.py  multi_web_tag.py  style_utils.py  styles_generator.py  tags_generator.py  tags_utils.py  web_element.py  web_tag.py
tests/: __init__.py  psd_spit_test.py  testPsdParser.py
tests/test_utils/: browser.py  strings.py
tools/: calc_image_descripor.py  site_screenshot.py  split_psd.py  train_mlp.py  train_mlp_font_size.py  train_mlp_text_width.py  webpage_elements.py  webpage_screen.py
utils/: __init__.py  args_types.py  browser.py  exc.py  files.py  geom.py  psd.py  shell.py  strings.py  version_check.py
utils/geom/: size.py
